<resources>
    <string name="action_retry">Try again</string>
    <string name="action_cancel">Cancel</string>

    <string name="project_selection_title">Dragonfly Lens</string>
    <string name="project_selection_subtitle">Choose a trained model below and explore the world
        around you
    </string>
    <string name="project_selection_about">About Us</string>
    <string name="project_selection_item_info">Ver. %1$04d - %2$s</string>
    <string name="project_selection_item_download">Download</string>
    <string name="project_selection_item_update">Update</string>
    <string name="project_selection_item_downloaded">Explore</string>
    <string name="project_selection_item_unavailable">Unavailable</string>
    <string name="project_selection_item_wait_message">Download in progress. Please wait…</string>
    <string name="project_selection_item_unavailable_message">No versions available yet.</string>

    <string name="project_selection_empty_state_title">No models found.</string>
    <string name="project_selection_empty_state_message">Looks like you do not have any models
        available.
    </string>
    <string name="project_selection_error_state_title">Uh-oh, an error occurred.</string>
    <string name="project_selection_error_state_message">An unexpected error happened, please try
        again.
    </string>
    <string name="project_selection_state_retry">@string/action_retry</string>

    <string name="project_selection_error_no_memory">Uh-oh, looks like your device is either quite
        busy or doesn\'t support the selected project. Please close some other apps and try again.
    </string>
    <string name="project_selection_error_no_memory_positive_action">@string/action_retry</string>
    <string name="project_selection_error_no_memory_negative_action">@string/action_cancel</string>

    <string name="project_selection_download_confirmation_title">Attention</string>
    <string name="project_selection_download_confirmation_message">You are about to download a large
        file over your mobile network and data charges may apply.
    </string>

    <string name="project_selection_update_message">There\'s a new model available</string>
    <string name="project_selection_update_button">Update</string>

    <string name="about_title">About Us</string>
    <string name="about_back_content_description">Back to previous screen</string>

    <string name="about_subtitle">Thoughtfully Fast. Purposely Lean.</string>
    <string name="about_description">CI&amp;T is a digital technology agency focused on creating
        digital experiences that people love.\n
        We see Machine Learning as a strong force allowing us to take bold ideas to the market with
        speed and agility.\n
        We are pioneers at combining design thinking, data-led strategy, lean principles, and
        advanced tech with years of industry expertise to create radically practical
        solutions for our clients.\n\n
        Read more at ciandt.com
    </string>
    <string name="about_privacy">
        <u>Privacy Policy</u>
    </string>
    <string name="about_privacy_url">http://www.ciandt.com</string>
    <string name="about_powered">POWERED BY CIANDT</string>

    <string name="permissions_open_settings">Settings</string>
    <string name="permissions_required_title">Permissions Required</string>
    <string name="permissions_required_description">Please provide the required permissions.
    </string>

    <string name="real_time_back_button">Back to previous screen</string>
    <string name="real_time_from_existing_picture">Select an image</string>

    <string name="feedback_title">Results</string>
    <string name="feedback_save">Save</string>
    <string name="feedback_save_content_description">Save Photo</string>
    <string name="feedback_back_content_description">Back to Live Lens</string>
    <string name="feedback_also_identify">Other predictions</string>
    <plurals name="feedback_classification">
        <item quantity="one">Is the prediction correct?</item>
        <item quantity="other">Are the predictions correct?</item>
    </plurals>
    <string name="feedback_more_info">MORE INFO</string>
    <string name="feedback_close">COLLAPSE</string>
    <string name="feedback_positive_button_content_description">Positive</string>
    <string name="feedback_negative_button_content_description">Negative</string>
    <string name="feedback_under_revision">Under Revision</string>
    <string name="feedback_is_something_wrong">Help us improve</string>
    <string name="feedback_choose_option">Choose a more accurate prediction for this image:</string>
    <string name="feedback_form_hint_or">Type a new one in here</string>
    <string name="feedback_form_hint">Type here your prediction</string>
    <string name="feedback_form_button_cancel">CANCEL</string>
    <string name="feedback_form_button_confirm">SUBMIT</string>
    <string name="feedback_negative_form_button_confirm">SEND FEEDBACK</string>
    <string name="feedback_no_classifications_found">No classifications found.</string>
    <string name="feedback_thanks">Thank you for your submission</string>
    <string name="feedback_save_image_success">Photo saved successfully.</string>
    <string name="feedback_save_image_error">Something was wrong. Please try again.</string>

    <string name="feedback_benchmark_button">Benchmark</string>
    <string name="feedback_benchmark_try_again">Try again</string>
    <string name="feedback_benchmark_error">Uh-oh, an error occurred!</string>
    <string name="feedback_benchmark_empty">No results found.</string>

    <string name="login_with_google">SIGN IN WITH GOOGLE</string>
    <string name="login_title">Dragonfly Lens</string>
    <string name="login_subtitle">Send feedback and compare the results with other services.
    </string>
    <string name="login_terms_and_conditions">TERMS AND CONDITIONS</string>

    <string name="login_error">There was an error when trying to connect. Please try again.</string>

    <string name="download_processing">Processing…</string>
    <string name="download_title">%1$s: %2$s</string>
    <string name="download_description">%1$s - Ver. %2$04d</string>
    <string name="download_finished">Ready to explore!</string>
    <string name="download_finished_button">Explore</string>
    <string name="download_failed">Oops… The download has failed</string>

    <string name="dialog_confirmation_button_cancel">CANCEL</string>
    <string name="dialog_confirmation_button_confirm">CONFIRM</string>

    <string name="logout">Logout</string>
</resources>
