<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_title_height"
        style="@style/About.Title"
        android:text="@string/about_title"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/About.Description"
                android:autoLink="web"
                android:text="@string/about_description"/>

            <TextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                style="@style/About.Privacy"
                android:text="@string/about_privacy"/>
        </RelativeLayout>
    </ScrollView>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_line_height"
        android:background="@color/about_line"/>

    <Button
        android:id="@+id/poweredBy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_powered_height"
        style="@style/AppTheme.Footer.Button"
        android:text="@string/about_powered"/>
</LinearLayout>