<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/feedbackResultContainer"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/feedback_result_background"
              android:animateLayoutChanges="true"
              android:orientation="vertical"
              tools:showIn="@layout/activity_feedback">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/touchable_area_minimum_dimension"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/feedback_result_text_vertical_margin"
            android:layout_marginBottom="@dimen/feedback_result_text_vertical_margin"
            android:paddingStart="@dimen/feedback_result_text_padding_left"
            style="@style/Feedback.Result.Title"
        />

        <ImageButton
            android:id="@+id/positiveButton"
            android:layout_width="@dimen/feedback_result_positive_button_width"
            android:layout_height="match_parent"
            android:minWidth="@dimen/touchable_area_minimum_dimension"
            android:layout_marginStart="@dimen/feedback_result_positive_button_margin_left"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/feedback_positive_button_content_description"
            android:scaleType="center"
            android:src="@drawable/thumbs_up_selector"
        />

        <ImageButton
            android:id="@+id/negativeButton"
            android:layout_width="@dimen/feedback_result_negative_button_width"
            android:layout_height="match_parent"
            android:minWidth="@dimen/touchable_area_minimum_dimension"
            android:layout_marginEnd="@dimen/feedback_result_negative_button_margin_right"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/feedback_negative_button_content_description"
            android:scaleType="center"
            android:src="@drawable/thumbs_down_selector"
        />

        <TextView
            android:id="@+id/underRevision"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/feedback_result_under_revision_margin_left"
            android:paddingEnd="@dimen/feedback_result_under_revision_padding_right"
            style="@style/Feedback.Result.UnderRevision"
            android:gravity="center"
            android:text="@string/feedback_under_revision"
            android:visibility="gone"
            tools:visibility="visible"
        />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:id="@+id/chipsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <View
                android:id="@+id/otherPredictionsSeparator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/feedback_result_line_height"
                android:layout_marginLeft="@dimen/feedback_result_line_horizontal_margin"
                android:layout_marginRight="@dimen/feedback_result_line_horizontal_margin"
                android:background="@color/feedback_result_line"
            />

            <LinearLayout
                android:id="@+id/otherPredictionsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <LinearLayout
                android:id="@+id/benchmarkContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/feedback_benchmark_container_minimum_height"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <View
                    android:id="@+id/servicesSeparator"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/feedback_result_line_height"
                    android:layout_marginLeft="@dimen/feedback_result_line_horizontal_margin"
                    android:layout_marginRight="@dimen/feedback_result_line_horizontal_margin"
                    android:background="@color/feedback_result_line"/>

                <Button
                    android:id="@+id/benchmarkButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/touchable_area_minimum_dimension"
                    android:layout_margin="@dimen/feedback_benchmark_button_margin"
                    style="@style/Feedback.Benchmark.Button"
                    android:text="@string/feedback_benchmark_button"
                />

                <ProgressBar
                    android:id="@+id/benchmarkLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/feedback_benchmark_loading_margin"
                    android:layout_marginBottom="@dimen/feedback_benchmark_loading_margin"
                    style="?android:attr/progressBarStyle"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorAccent"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    tools:ignore="UnusedAttribute"/>

                <LinearLayout
                    android:id="@+id/benchmarkErrorState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/feedback_benchmark_error_margin"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/benchmarkErrorMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Feedback.Benchmark.Message"
                        android:text="@string/feedback_benchmark_error"/>

                    <Button
                        android:id="@+id/benchmarkErrorRetry"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/touchable_area_minimum_dimension"
                        android:layout_margin="@dimen/feedback_benchmark_button_margin"
                        style="@style/Feedback.Benchmark.ButtonRetry"
                        android:text="@string/feedback_benchmark_try_again"
                    />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/moreInfoSeparator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/feedback_result_line_height"
            android:layout_marginLeft="@dimen/feedback_result_line_horizontal_margin"
            android:layout_marginRight="@dimen/feedback_result_line_horizontal_margin"
            android:layout_below="@id/chipsContainer"
            android:background="@color/feedback_result_line"
        />

        <RelativeLayout
            android:id="@+id/toggleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/moreInfoSeparator"
            tools:visibility="gone">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="@dimen/feedback_result_more_info_height"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/toggleButton"
                android:layout_alignBottom="@+id/toggleButton"
                android:layout_alignParentEnd="true"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/ic_arrow_up"
            />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/toggleButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/feedback_result_more_info_height"
                android:minHeight="@dimen/touchable_area_minimum_dimension"
                android:paddingStart="@dimen/feedback_result_more_info_padding_left"
                style="@style/Feedback.Result.MoreInfo"
                android:gravity="center_vertical"
                android:text="@string/feedback_more_info"
            />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/negativeFormButtonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/moreInfoSeparator"
            android:gravity="end"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/negativeFormCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/touchable_area_minimum_dimension"
                android:layout_marginEnd="@dimen/feedback_form_buttons_margin_right"
                style="@style/Feedback.Form.CancelButton"
                android:text="@string/feedback_form_button_cancel"
            />

            <Button
                android:id="@+id/negativeFormConfirmButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/touchable_area_minimum_dimension"
                android:layout_marginEnd="@dimen/feedback_form_buttons_margin_right"
                style="@style/Feedback.Form.ConfirmButton"
                android:enabled="false"
                android:text="@string/feedback_form_button_confirm"
            />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>