<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
             android:layout_height="match_parent">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_logo_margin_top"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:src="@drawable/dragonfly_logo"/>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_subtitle_margin_top"
            android:layout_marginLeft="@dimen/login_subtitle_horizontal_margin"
            android:layout_marginRight="@dimen/login_subtitle_horizontal_margin"
            android:layout_marginStart="@dimen/login_subtitle_horizontal_margin"
            android:layout_marginEnd="@dimen/login_subtitle_horizontal_margin"
            android:layout_below="@+id/logo"
            style="@style/Login.Subtitle"
            android:text="@string/login_subtitle"
        />

        <Button
            android:id="@+id/withGoogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_google_height"
            android:layout_marginTop="@dimen/login_google_margin_top"
            android:layout_marginLeft="@dimen/login_google_horizontal_margin"
            android:layout_marginRight="@dimen/login_google_horizontal_margin"
            android:layout_marginStart="@dimen/login_google_horizontal_margin"
            android:layout_marginEnd="@dimen/login_google_horizontal_margin"
            android:layout_below="@id/subtitle"
            style="@style/Login.Google"
            android:text="@string/login_with_google"
        />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_footer_line_height"
            android:layout_above="@+id/termsAndConditions"
            android:background="@color/login_footer_line"/>

        <Button
            android:id="@+id/termsAndConditions"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_footer_height"
            android:layout_alignParentBottom="true"
            style="@style/AppTheme.Footer.Button"
            android:text="@string/login_terms_and_conditions"/>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_progress_background"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <android.support.v4.widget.ContentLoadingProgressBar
            android:layout_width="@dimen/login_progress_dimension"
            android:layout_height="@dimen/login_progress_dimension"
            style="?android:attr/progressBarStyleLarge"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorAccent"
            android:layout_gravity="center"
            tools:ignore="UnusedAttribute"/>
    </FrameLayout>

</FrameLayout>
