<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.projectselection.ProjectSelectionActivity">

    <android.support.v7.widget.Toolbar
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/ProjectSelection.Toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/AppTheme.Toolbar.TextAppearance.Title"
                android:gravity="center_vertical"
                android:text="@string/project_selection_title"/>

            <ImageButton
                android:id="@+id/logout"
                android:layout_width="@dimen/touchable_area_minimum_dimension"
                android:layout_height="@dimen/touchable_area_minimum_dimension"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                style="@style/AppTheme.Toolbar.Button.Flat"
                android:contentDescription="@string/logout"
                android:src="@drawable/ic_logout"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/project_selection_subtitle_margin_top"
        android:layout_marginLeft="@dimen/project_selection_subtitle_horizontal_margin"
        android:layout_marginRight="@dimen/project_selection_subtitle_horizontal_margin"
        android:layout_marginStart="@dimen/project_selection_subtitle_horizontal_margin"
        android:layout_marginEnd="@dimen/project_selection_subtitle_horizontal_margin"
        android:layout_below="@+id/toolbar"
        style="@style/ProjectSelection.Subtitle"
        android:text="@string/project_selection_subtitle"
    />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/project_selection_list_height"
        android:layout_marginTop="@dimen/project_selection_list_margin_top"
        android:paddingLeft="@dimen/project_selection_list_horizontal_padding"
        android:paddingRight="@dimen/project_selection_list_horizontal_padding"
        android:layout_below="@+id/subtitle"
        android:clipToPadding="false"
        android:overScrollMode="never"
    />

    <LinearLayout
        android:id="@+id/messageContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/project_selection_list_height"
        android:layout_alignTop="@id/recyclerView"
        android:layout_alignBottom="@id/recyclerView"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/messageIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_warning"/>

        <TextView
            android:id="@+id/messageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/project_selection_message_text_margin"
            style="@style/ProjectSelection.Message"
            android:text="@string/project_selection_empty_message"/>

        <Button
            android:id="@+id/messageRetry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/project_selection_message_button_margin"
            android:layout_marginEnd="@dimen/project_selection_message_button_margin"
            android:background="@android:color/transparent"
            android:text="@string/project_selection_retry"
            android:textColor="@color/project_selection_about"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/recyclerView"
        android:layout_alignBottom="@id/recyclerView"
        android:layout_centerHorizontal="true"
        style="?android:attr/progressBarStyle"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="invisible"
        tools:ignore="UnusedAttribute"/>

    <View android:layout_width="match_parent"
          android:layout_height="@dimen/project_selection_line_height"
          android:layout_marginLeft="@dimen/project_selection_line_horizontal_margin"
          android:layout_marginRight="@dimen/project_selection_line_horizontal_margin"
          android:layout_above="@+id/about"
          android:background="@color/project_selection_line"/>

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/project_selection_about_height"
        android:layout_alignParentBottom="true"
        style="@style/ProjectSelection.About"
        android:drawableStart="@drawable/ciandt_logo"
    />

    <RelativeLayout
        android:id="@+id/updateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/touchable_area_minimum_dimension"
        android:layout_margin="@dimen/project_selection_update_margin"
        android:paddingLeft="@dimen/project_selection_update_horizontal_padding"
        android:layout_above="@id/about"
        android:background="@drawable/update_background"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/update"
            android:layout_centerVertical="true"
            style="@style/ProjectSelection.Update.Message"
            android:text="@string/project_selection_update_message"/>

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            style="@style/ProjectSelection.Update.Button"
            android:text="@string/project_selection_update_button"
        />
    </RelativeLayout>

</RelativeLayout>
